# infrabot

./: README.md  main.py  pyproject.toml  requirements.txt  run_example.py
agents/: crew.py
core/: infrabot.py  memory.py
utils/: ansible_runner.py  ollama_client.py
